Added docker file to create image
A. Added docker file for 2 cases
   1. Using source code 
   2. Using a jar 
B. Code cleanup