@@ -6,7 +6,6 @@ import com.techlab.grocery.application.service.UserService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -14,7 +13,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The class UserDetailsServiceImpl
@@ -35,17 +33,17 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        logger.info("Authenticating for Username: " + username);
+        logger.info("Authenticating for Username: {}", username);
         User user = userService.getUser(username);
         if (user == null) {
-            logger.info("Authenticating failed Username: " + username);
+            logger.info("Authenticating failed Username: {}", username);
             throw new UsernameNotFoundException("User not found with username: " + username);
         }
-        logger.info("Authenticating successful for Username: " + username);
+        logger.info("Authenticating successful for Username: {}", username);
         List<Role> roles = user.getRoles();
-        List<GrantedAuthority> authorities = roles.stream()
+        List<SimpleGrantedAuthority> authorities = roles.stream()
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role.toString()))
-                .collect(Collectors.toList());
+                .toList();
         return new org.springframework.security.core.userdetails.User(user.getUserId(), user.getPassword(), authorities);
     }
 }
